{{$NEXT}}

1.17      Jan 15 2016

    * Include CGI in test prerequisites since it's not part of perlcore anymore

1.16      Sep 15 2014

    * Require Net-OpenID-Common 1.19

1.15      Sep 06 2013

    * Require Net-OpenID-Common 1.18
      in order to pick up patched Crypt::DH::GMP 0.00011 (closes #88460)

1.14      Apr 01 2013

    * Fix uri_escape'ing of UTF-8 attributes (closes #80329)

    * documentation fixes and updated consumer.cgi example (closes #74101)

1.13      Nov 14 2011

1.12      Nov 06 2011

    * Require Net-OpenID-Common 1.13

    * Use/cache Last-modified: as a number, not a raw header string (closes #47349)

    * Pay attention to charset on application/xrds+xml content-type (closes #41310)

1.11      Nov 04 2011

    * Added POD section on Error Codes

    * Fixed bug that could cause VerifiedIdentity->signed_fields
      to be spuriously set to an empty hash

    * Fixed bug where _discover_acceptable_endpoints force_version => 1
      could return version 2 endpoints.

1.100099_002 Nov 02 2011

    * We now do actual checking of responce_nonce (closes #44767).

      Behavior is customizable using Consumer->nonce_options.
      You may want to set 'start' to your (cache/HTTP) server start time.
      The defaults will otherwise do the Right Thing if your cache
      implementation pays attention to the 3rd (expiration)
      argument to set() and can reliably hold onto entries for a
      half hour; otherwise this may need some attention.

      Likewise if you already have better protection against
      replays, in which case you'll want to turn this off.

    * Lots of POD fixes

1.100099_001 Oct 25 2011

  ---------------
  ==> API CHANGE:  Consumer->args(CODEREF)

      CODEREF now needs to be able to also take zero arguments and
      return a list of all URL parameters in the request.

      No change is needed for the other argument types
      (i.e., unblessed hash or CGI/Apache/etc request object)
